# FamBank

./: .gitignore  .mcp.json  CLAUDE.md  README.md  project.config.json
backend/: .env.example  pyproject.toml
backend/app/: auth.py  database.py  logging_config.py  main.py
backend/app/api/: accounts.py  auth.py  config.py  deps.py  family.py  income.py  redemption.py  settlement.py  transactions.py  violations.py  wishlist.py
backend/app/middleware/: logging_middleware.py  security_middleware.py
backend/app/migrations/: init.sql  seed.sql  triggers.sql
backend/app/models/: __init__.py  account.py  config.py  debt.py  escrow.py  family.py  invitation.py  redemption_request.py  refresh_token.py  settlement.py  sms_code.py  transaction.py  user.py  violation.py  wishlist.py
backend/app/schemas/: auth.py  common.py  config.py  family.py  income.py  purchase.py  redemption.py  settlement.py  spending.py  transaction.py  violation.py  wishlist.py
backend/app/services/: auth.py  config.py  escrow.py  family.py  income.py  interest.py  overflow.py  purchase.py  redemption.py  settlement.py  sms.py  spending.py  tenant.py  transaction.py  violation.py  wishlist.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_pin.py  test_redemption_db.py  test_spending_db.py  test_violation_db.py
backend/tests/unit/: test_income_split.py  test_interest_calc.py  test_overflow.py  test_penalty.py  test_pin_validation.py  test_purchase.py  test_redemption_fee.py  test_spending.py  test_wishlist.py
deploy/: fambank.service  setup.sh
doc/: 家庭内部银行-分层资产管理章程.md
(+159 files in other folders)
